<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/intro_textet"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textintro"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/add_fab"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="#2196F3"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_shopping_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_shopping_fab"
        app:backgroundTint="#2196F3"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_fab"
        app:layout_constraintStart_toStartOf="@+id/add_fab"
        app:srcCompat="@drawable/ic_baseline_add_shopping_cart_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_camera_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_camera_fab_desc"
        app:backgroundTint="#2196F3"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_shopping_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_shopping_fab"
        app:layout_constraintStart_toStartOf="@+id/add_shopping_fab"
        app:srcCompat="@drawable/ic_baseline_camera_alt_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_purchase_detail_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/purchase_details_desc"
        app:backgroundTint="#2196F3"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_camera_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_camera_fab"
        app:layout_constraintStart_toStartOf="@+id/add_camera_fab"
        app:srcCompat="@drawable/ic_baseline_list_alt_24" />

    <TextView
        android:id="@+id/add_shopping_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_shopping"
        app:layout_constraintBottom_toBottomOf="@+id/add_shopping_fab"
        app:layout_constraintEnd_toStartOf="@+id/add_shopping_fab"
        app:layout_constraintTop_toTopOf="@+id/add_shopping_fab" />

    <TextView
        android:id="@+id/add_camera_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/take_picture"
        app:layout_constraintBottom_toBottomOf="@+id/add_camera_fab"
        app:layout_constraintEnd_toStartOf="@+id/add_camera_fab"
        app:layout_constraintTop_toTopOf="@+id/add_camera_fab" />

    <TextView
        android:id="@+id/add_details_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/purchase_details_text"
        app:layout_constraintBottom_toBottomOf="@+id/add_purchase_detail_fab"
        app:layout_constraintEnd_toStartOf="@+id/add_purchase_detail_fab"
        app:layout_constraintTop_toTopOf="@+id/add_purchase_detail_fab" />

    <ImageButton
        android:id="@+id/en_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:src="@drawable/en_1"
        android:text="@string/en"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        tools:srcCompat="@drawable/en_1" />

    <ImageButton
        android:id="@+id/hu_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:text="@string/hu"
        app:layout_constraintBottom_toBottomOf="@+id/en_btn"
        app:layout_constraintEnd_toStartOf="@+id/en_btn"
        app:layout_constraintTop_toTopOf="@+id/en_btn"
        app:srcCompat="@drawable/hu_1"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>